
Tutor names added as a pop-up to the Register completion list.

EntryBook side bar displays (if it can) the next enrolment number
value to be generated.

Fixed display of assessments on the enrolments_list.

The distinction between static and live recording of enquires removed
by merging the two methods in the applications table.



Version ClaSS-1.0.40 release (2013/01/07)
-------------------------------------------

Fixes to the new enquiries script to decode utf8 characters and to
expunge on closing connection.

Export of invoiced charges from the remittance view page.

Function to change state of Paid/Not Paid charges from the remittance
view page.

New document drop option added to skills profile in the MarkBook for
recording observations and supporting examples.

New outlite css class for mark table cells.

Highlight the started but not yet achieved areas in skills profiles in
the MarkBook table.

Changed mail queue options to keep the queue size to a minimum.


Version ClaSS-1.0.39 release (2013/01/02)
-------------------------------------------

Added carer as a new telephone type.

Fix to fetchSubjectReport for compatibility with pre-html subject
comments.

New external book for a Calendar added (currently only works with a
public Google Calendar).

Changed the main book include script to use tabname and as the
optional switch for activating externalbooks.

New profile option called celldisplay (othertype field in categorydef
table) for displaying extra content in the MarkBook.

Fix to new_mark scripts when creating a mark for a previous academic
year.


Version ClaSS-1.0.38 release (2012/12/10)
-------------------------------------------

Changed name of config option from localpostcode to sitepostcode.

Added config option for external api_key.

Added additional language (2nd and 3rd) fields for students.

New option to sort labels by contact name instead of student.



Version ClaSS-1.0.37 release (2012/12/02)